// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Share project modal Inviting users works 1`] = `
[
  "http://localhost:3000/v2/access/testae48e318dab9a1bd0bexperiment",
  {
    "body": "{"projectUuid":"testae48e318dab9a1bd0bexperiment","role":"explorer","userEmail":"asd@asd.com"}",
    "headers": {
      "Content-Type": "application/json",
    },
    "method": "PUT",
  },
]
`;

exports[`Share project modal Transferring ownership works 1`] = `
[
  "http://localhost:3000/v2/access/testae48e318dab9a1bd0bexperiment",
  {
    "body": "{"projectUuid":"testae48e318dab9a1bd0bexperiment","role":"owner","userEmail":"newowner@owner.com"}",
    "headers": {
      "Content-Type": "application/json",
    },
    "method": "PUT",
  },
]
`;
